# sentinel

./: .gitignore  README.md
cli/src/: main.rs
cli/src/client/: mod.rs  policy_runner.rs
cli/src/commands/: mod.rs
cli/src/commands/health/: mod.rs
cli/src/commands/monitor/: mod.rs
cli/src/models/: policy.rs
cli/tests/policies/: test.yaml
core/: Cargo.toml
core/src/: config.rs  lib.rs  main.rs
core/src/client/: mod.rs  sentinel.rs
core/src/commands/policy/: mod.rs
core/src/commands/validate/: mod.rs
core/src/models/: health.rs  mod.rs  policy.rs  providers.rs
core/src/policy/: action.rs  condition.rs  mod.rs  runner.rs
core/src/providers/: mod.rs  openai.rs  policy_engine.rs
core/src/utils/: mod.rs
core/tests/: api_integration.rs  cli_tests.rs  policy_test.rs
python/: evaluator_manager.py  protocols.py  pyproject.toml  run_api.py
python/api/: __init__.py  main.py
python/api/routes/: system.py
python/evaluators/: performance.py  semantic.py
server/: __init__.py  evaluator_manager.py  protocols.py  run_api.py
server/api/: main.py
server/api/routes/: chat.py  evaluation.py  llm_proxy.py  policies.py
server/evaluators/: __init__.py  content_safety.py  keyword_filter.py
server/models/pydantic/: chat.py  evaluation.py  policy.py
server/services/: llm_proxy.py  policy_runner.py
