[package]
name = "sentinel"
version = "1.0.0"
edition = "2021"
description = "AI Governance Platform CLI"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.0"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
crossterm = "0.27"
ratatui = "0.24"
thiserror = "1.0"
fmt = "0.1.0"
