[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel - Advanced AI model evaluation"
authors = [{ name = "Sentinel Team", email = "team@sentinel.dev" }]
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "nltk>=3.8",
    "spacy>=3.6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "tqdm>=4.65.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
flux-ml = "flux_ml.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=sentinel --cov-report=html --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
